--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,7 @@
 html {
   box-sizing: border-box;
-  font-family: "Merriweather",serif;
-  line-height: 1.5;
-  font-size: 1.125rem;
+  font-family: Merriweather, serif;
+  line-height: 1.5rem;
 }
 
 *, *::before, *::after {
@@ -13,15 +12,39 @@ body {
   margin: 0;
 }
 
-img {
-  display: block;
-  width: 100%;
-}
-
 header {
-  display: flex;
-  justify-content: ;
-  align-items: center;
   background-color: #d05c2e;
   color: #fff;
+  margin: 0;
+}
+
+.grains {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0;
+}
+
+img {
+  display: block;
+  width: 40px;
+  margin: 0;
+}
+
+.nav {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+}
+
+div li {
+  border: 2px solid #a63f38;
+  padding: .5em .4em;
+  margin: 0;
+  text-decoration: none;
+}
+
+li a {
+  color: #fff;
+  text-decoration: none;
 }
