--- a/css/main.css
+++ b/css/main.css
@@ -45,16 +45,15 @@ nav ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  border: 1px solid #a63f38;
 }
 
 nav li {
-  border-right: 1px solid #a63f38;
-  border-left: 1px solid #a63f38;
-  padding: .5em 0;
+  border: 1px solid #a63f38;
+  flex-basis: 33.33%;
 }
 
 a {
+  display: block;
   color: #fff;
   text-decoration: none;
   text-align: center;
