--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ header {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  align-items: stretch;
+  align-items: center;
 }
 
 .grains div {
